implement tinspin kd tree